src/components/Navbar/Navbar.scss
.Navbar {
  background: $orange;
  position: relative;

  .Navbar__inside {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 8px 0;

    @include for-desktop-up {
      padding: 21px 0;
    }

    .Navbar__logo {
      a {
        text-decoration: none;
      }
      h1 {
        color: #eff4f9;
        font-weight: bold;

        @include for-desktop-up {
          font-size: 48px;
          line-height: 56px;
        }
      }
    }

    @include for-desktop-up {
      .Navbar__hamburguer-menu {
        display: none;
      }
    }

    .MenuLinks {
      position: absolute;
      top: 100%;
      left: 0;
      right: 0;
      width: 100vw;
      z-index: 1;
      background: $orange;
      max-height: 0;
      overflow: hidden;
      transition: max-height 0.5s;
      pointer-events: none;

      * {
        pointer-events: none;
      }

      &.active {
        max-height: 1000px;

        * {
          pointer-events: all;
        }
      }

      @include for-desktop-up {
        position: static;
        max-height: initial;
        width: auto;
        overflow: visible;
        pointer-events: all;
        top: 0;

        * {
          pointer-events: all;
        }
      }

      .MenuLinks__container {
        max-width: 560px;
        margin: 0 auto;

        @include for-desktop-up {
          display: flex;
          font-weight: bold;
          font-size: 20.35px;
          line-height: 28px;
        }

        .MenuLinks__link {
          padding: $nudge-2;
          text-align: right;

          a {
            color: #eff4f9;
            text-decoration: none;

            &.active,
            &:hover {
              text-decoration: underline;
            }
          }
        }
      }
    }
  }
}

